# OpenColorIO-Configs

./: .gitattributes  README.md  pyproject.toml
OpenColorIO-Configs/aces_1.2/: config.ocio
OpenColorIO-Configs/aces_1.2/luts/: ACESproxy_to_linear.spi1d  InvRRT.DCDM__P3D65_Limited_.Log2_48_nits_Shaper.spi3d  InvRRT.P3-DCI__D60_simulation_.Log2_48_nits_Shaper.spi3d  InvRRT.P3-DCI__D65_simulation_.Log2_48_nits_Shaper.spi3d  InvRRT.Rec.709__D60_sim._.Log2_48_nits_Shaper.spi3d  Log2_48_nits_Shaper.RRT.P3-DCI__D60_simulation_.spi3d  Log2_48_nits_Shaper.RRT.P3-DCI__D65_simulation_.spi3d  Log2_48_nits_Shaper.RRT.P3D65__D60_simulation_.spi3d  Log2_48_nits_Shaper.RRT.Rec.2020__P3D65_Limited_.spi3d  Log2_48_nits_Shaper.RRT.Rec.2020__Rec.709_Limited_.spi3d  Log2_48_nits_Shaper_to_linear.spi1d  REDLog3G10_to_linear.spi1d  S-Log1_to_linear.spi1d  S-Log2_to_linear.spi1d  V3_LogC_1600_to_linear.spi1d  V3_LogC_2000_to_linear.spi1d  V3_LogC_250_to_linear.spi1d  V3_LogC_500_to_linear.spi1d  linear_to_rec2020.spi1d
OpenColorIOConfigs/aces_1.2/luts/: ACEScct_to_linear.spi1d  InvRRT.Rec.709.Log2_48_nits_Shaper.spi3d  Log2_2000_nits_Shaper_to_linear.spi1d  S-Log3_to_linear.spi1d  (+9 more)
aces_1.2/luts/: ACEScc_to_linear.spi1d  ADX_CID_to_RLE.spi1d  Canon-Log2_to_linear.spi1d  Canon-Log3_to_linear.spi1d  Canon-Log_to_linear.spi1d  CineonLog_to_linear.spi1d  InvRRT.DCDM.Log2_48_nits_Shaper.spi3d  InvRRT.P3-D60.Log2_48_nits_Shaper.spi3d  InvRRT.P3D65.Log2_48_nits_Shaper.spi3d  InvRRT.P3D65__D60_simulation_.Log2_48_nits_Shaper.spi3d  InvRRT.Rec.2020.Log2_48_nits_Shaper.spi3d  InvRRT.sRGB.Log2_48_nits_Shaper.spi3d  InvRRT.sRGB__D60_sim._.Log2_48_nits_Shaper.spi3d  LMT_Shaper_to_linear.spi1d  Log2_1000_nits_Shaper_to_linear.spi1d  Log2_108_nits_Shaper_to_linear.spi1d  Log2_48_nits_Shaper.RRT.DCDM.spi3d  Log2_48_nits_Shaper.RRT.DCDM__P3D60_Limited_.spi3d  Log2_48_nits_Shaper.RRT.DCDM__P3D65_Limited_.spi3d  Log2_48_nits_Shaper.RRT.P3D65.spi3d  Log2_48_nits_Shaper.RRT.Rec.709.spi3d  Log2_48_nits_Shaper.RRT.Rec.709__D60_sim._.spi3d  Log2_48_nits_Shaper.RRT.sRGB__D60_sim._.spi3d  V-Log_to_linear.spi1d  V3_LogC_1000_to_linear.spi1d  V3_LogC_1280_to_linear.spi1d  V3_LogC_160_to_linear.spi1d  V3_LogC_200_to_linear.spi1d  V3_LogC_320_to_linear.spi1d  V3_LogC_400_to_linear.spi1d  V3_LogC_640_to_linear.spi1d  linear_to_rec1886.spi1d  linear_to_sRGB.spi1d
