[project]
version = "1.0.0"
name = "OpenColorIO-Configs"
description = "Curated set of OpenColorIO Configs for use in OpenPype"
readme = "README.md"
authors = [
    { name = "OpenPype Team", email ="info@openpype.io" },
]
license = { file = "LICENSE" }
requires-python = ">=2.7"
keywords = ["environment", "pipeline", "color"]

classifiers = [
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Intended Audience :: Developers"
]

[tool.poetry]

[project.urls]
homepage = "https://github.com/pypeclub/OpenColorIO-Configs"
repository = "https://github.com/pypeclub/OpenColorIO-Configs"
documentation = "https://github.com/pypeclub/OpenColorIO-Configs"

[build-system]
requires = ["setuptools >= 35.0.2", "wheel"]
build-backend = "setuptools.build_meta"