[tool.poetry]
version = "1.0.1"
name = "OpenColorIO-Configs"
description = "Curated set of OpenColorIO Configs for use in OpenPype"
readme = "README.md"
authors = ["OpenPype Team <info@openpype.io>"]
license = "MIT License"
keywords = ["environment", "pipeline", "color"]

classifiers = [
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Intended Audience :: Developers"
]

homepage = "https://github.com/pypeclub/OpenColorIO-Configs"
repository = "https://github.com/pypeclub/OpenColorIO-Configs"
documentation = "https://github.com/pypeclub/OpenColorIO-Configs"

packages = [{ include = "aces_1.2" }]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"